// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loan List Controller => When fail request should retun erro=true 1`] = `
<Text>
  comunication fail
</Text>
`;

exports[`Loan List Controller => When screen is not in focus state shoud return empty list 1`] = `
<Text>
  empty list
</Text>
`;

exports[`Loan List Controller => When success request should retun IContrllerData<LoanEntity[]> 1`] = `
<Text>
  teste
</Text>
`;
